Trying Kay's fix for dreaded horizontal scroll on mobile

--- a/styles/scss/layout/_portfolio.scss
+++ b/styles/scss/layout/_portfolio.scss
@@ -7,6 +7,7 @@
     }
     ul {
         margin: 7.5% 19% 10%;
+        overflow-x: hidden;
         @media (max-width: 1070px) {
             margin: 7.5% 10% 10%;
         }
